update cloud-init config

--- a/cloud-init/cloud.cfg
+++ b/cloud-init/cloud.cfg
@@ -4,13 +4,20 @@
 # and system configuration.
 
 # Homelab specific stuff
-fqdn: <my_domain>  # e.g. n0.crisplab.local
+fqdn: <my_domain>  # e.g. n0-crisplab.local
 
 prefer_fqdn_over_hostname: true
 preserve_hostname: false
 # hostname: overriden by fqdn
 manage_etc_hosts: localhost
 
+apt:
+  conf: |
+    Acquire:Retries "10";
+    DPkg::Lock::Timeout "60";
+
+package_update: true
+package_upgrade: true
 packages:
    - avahi-daemon
 
